--- a/services/auth-service/package.json
+++ b/services/auth-service/package.json
@@ -1,73 +1,73 @@
 {
-    "name": "auth-service",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-        "clean": "rimraf dist",
-        "build": "npm run clean && tsc",
-        "start": "node dist/server.js",
-        "test": "cross-env NODE_ENV=test jest --detectOpenHandles --forceExit",
-        "test:unit": "cross-env NODE_ENV=test jest tests/unit",
-        "test:functional": "cross-env NODE_ENV=test jest tests/functional",
-        "test:integration": "cross-env NODE_ENV=test jest tests/integration",
-        "migrate": "sequelize-cli db:migrate --require ts-node/register",
-        "migrate:undo": "sequelize-cli db:migrate:undo --require ts-node/register"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "axios": "^1.9.0",
-        "bcrypt": "^6.0.0",
-        "cookie-parser": "^1.4.7",
-        "cors": "^2.8.5",
-        "dotenv": "^16.5.0",
-        "express": "^5.1.0",
-        "express-rate-limit": "^7.5.1",
-        "express-session": "^1.18.1",
-        "iconv-lite": "^0.6.3",
-        "jsonwebtoken": "^9.0.2",
-        "ms": "^2.1.3",
-        "multer": "^2.0.1",
-        "mysql2": "^3.14.1",
-        "nodemailer": "^7.0.3",
-        "passport": "^0.7.0",
-        "passport-google-oauth20": "^2.0.0",
-        "qrcode": "^1.5.4",
-        "sequelize": "^6.37.7",
-        "speakeasy": "^2.0.0",
-        "winston": "^3.17.0",
-        "zod": "^3.25.51"
-    },
-    "devDependencies": {
-        "@types/bcrypt": "^5.0.2",
-        "@types/cookie-parser": "^1.4.8",
-        "@types/cors": "^2.8.18",
-        "@types/express": "^5.0.1",
-        "@types/express-session": "^1.18.1",
-        "@types/jest": "^29.5.14",
-        "@types/jsonwebtoken": "^9.0.9",
-        "@types/multer": "^1.4.12",
-        "@types/node": "^22.16.0",
-        "@types/nodemailer": "^6.4.17",
-        "@types/passport": "^1.0.17",
-        "@types/passport-google-oauth20": "^2.0.16",
-        "@types/qrcode": "^1.5.5",
-        "@types/speakeasy": "^2.0.10",
-        "@types/supertest": "^6.0.3",
-        "@types/uuid": "^10.0.0",
-        "cross-env": "^7.0.3",
-        "jest": "^29.7.0",
-        "rimraf": "^6.0.1",
-        "sequelize-cli": "^6.6.3",
-        "supertest": "^7.1.1",
-        "ts-jest": "^29.3.4",
-        "ts-node-dev": "^2.0.0",
-        "typescript": "^5.8.3"
-    },
-    "sequelize-cli": {
-        "config": "sequelize-cli.config.js"
-    }
+  "name": "auth-service",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "clean": "rimraf dist",
+    "build": "npm run clean && tsc",
+    "start": "node dist/server.js",
+    "test": "cross-env NODE_ENV=test jest --detectOpenHandles --forceExit",
+    "test:unit": "cross-env NODE_ENV=test jest tests/unit",
+    "test:functional": "cross-env NODE_ENV=test jest tests/functional",
+    "test:integration": "cross-env NODE_ENV=test jest tests/integration",
+    "migrate": "sequelize-cli db:migrate --require ts-node/register",
+    "migrate:undo": "sequelize-cli db:migrate:undo --require ts-node/register"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.9.0",
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "express-rate-limit": "^7.5.1",
+    "express-session": "^1.18.1",
+    "iconv-lite": "^0.6.3",
+    "jsonwebtoken": "^9.0.2",
+    "ms": "^2.1.3",
+    "multer": "^2.0.1",
+    "mysql2": "^3.14.1",
+    "nodemailer": "^7.0.3",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "qrcode": "^1.5.4",
+    "sequelize": "^6.37.7",
+    "speakeasy": "^2.0.0",
+    "winston": "^3.17.0",
+    "zod": "^3.25.51"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.8",
+    "@types/cors": "^2.8.18",
+    "@types/express": "^5.0.1",
+    "@types/express-session": "^1.18.1",
+    "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.16.0",
+    "@types/nodemailer": "^6.4.17",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.16",
+    "@types/qrcode": "^1.5.5",
+    "@types/speakeasy": "^2.0.10",
+    "@types/supertest": "^6.0.3",
+    "@types/uuid": "^10.0.0",
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
+    "rimraf": "^6.0.1",
+    "sequelize-cli": "^6.6.3",
+    "supertest": "^7.1.1",
+    "ts-jest": "^29.3.4",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.8.3"
+  },
+  "sequelize-cli": {
+    "config": "src/sequelize-cli.config.js"
+  }
 }
