--- a/services/wishlist-service/package.json
+++ b/services/wishlist-service/package.json
@@ -12,8 +12,10 @@
     "test:unit": "cross-env NODE_ENV=test jest tests/unit",
     "test:functional": "cross-env NODE_ENV=test jest tests/functional",
     "test:integration": "cross-env NODE_ENV=test jest tests/integration",
-    "migrate": "sequelize-cli db:migrate --require ts-node/register",
-    "migrate:undo": "sequelize-cli db:migrate:undo --require ts-node/register"
+    "sequelize": "sequelize-cli",
+    "migrate": "cross-env NODE_ENV=development node -r ts-node/register ./node_modules/sequelize-cli/lib/sequelize db:migrate --config src/sequelize.config.js",
+    "migration:generate": "cross-env NODE_OPTIONS=--require ts-node/register sequelize-cli migration:generate --migrations-path src/migrations",
+    "migrate:undo": "cross-env NODE_OPTIONS=--require ts-node/register sequelize db:migrate:undo --config src/sequelize.config.ts"
   },
   "keywords": [],
   "author": "",
@@ -46,7 +48,10 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.16.0",
     "@types/supertest": "^6.0.3",
+    "cross-env": "^10.0.0",
     "rimraf": "^6.0.1",
+    "sequelize-cli": "^6.6.3",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   },
