--- a/services/wishlist-service/package.json
+++ b/services/wishlist-service/package.json
@@ -13,7 +13,7 @@
     "test:functional": "cross-env NODE_ENV=test jest tests/functional",
     "test:integration": "cross-env NODE_ENV=test jest tests/integration",
     "sequelize": "sequelize-cli",
-    "migrate": "cross-env NODE_ENV=development node -r ts-node/register ./node_modules/sequelize-cli/lib/sequelize db:migrate --config src/sequelize.config.js",
+    "migrate": "cross-env NODE_ENV=development node -r ts-node/register ./node_modules/sequelize-cli/lib/sequelize db:migrate --config src/sequelize.config.ts",
     "migration:generate": "cross-env NODE_OPTIONS=--require ts-node/register sequelize-cli migration:generate --migrations-path src/migrations",
     "migrate:undo": "cross-env NODE_OPTIONS=--require ts-node/register sequelize db:migrate:undo --config src/sequelize.config.ts"
   },
