--- a/services/wishlist-service/package.json
+++ b/services/wishlist-service/package.json
@@ -24,6 +24,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "cross-env": "^10.0.0",
@@ -33,7 +34,8 @@
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.4.5",
     "ms": "^2.1.3",
-    "multer": "^2.0.1",
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.14.1",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.3",
