--- a/services/user-service/package.json
+++ b/services/user-service/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -29,7 +30,8 @@
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.4.5",
     "ms": "^2.1.3",
-    "multer": "^2.0.1",
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.14.1",
     "sequelize": "^6.37.7",
     "winston": "^3.17.0",
@@ -42,7 +44,7 @@
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
-    "@types/multer": "^1.4.12",
+    "@types/multer": "^1.4.13",
     "@types/node": "^22.16.0",
     "@types/supertest": "^6.0.3",
     "cross-env": "^7.0.3",
