--- a/services/notification-service/package.json
+++ b/services/notification-service/package.json
@@ -35,6 +35,7 @@
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
     "sequelize": "^6.37.7",
+    "sequelize-cli": "^6.6.3",
     "supertest": "^7.1.1",
     "winston": "^3.17.0",
     "zod": "^3.25.51"
