--- a/services/auth-service/package.json
+++ b/services/auth-service/package.json
@@ -12,7 +12,7 @@
     "test:unit": "cross-env NODE_ENV=test jest tests/unit",
     "test:functional": "cross-env NODE_ENV=test jest tests/functional",
     "test:integration": "cross-env NODE_ENV=test jest tests/integration",
-    "migrate": "sequelize-cli db:migrate --require ts-node/register",
+    "migrate": "cross-env NODE_ENV=production node ./node_modules/sequelize-cli/lib/sequelize db:migrate --config dist/sequelize.config.js --migrations-path dist/migrations --models-path dist/models --seeders-path dist/seeders",
     "migration:generate": "NODE_OPTIONS=--require=ts-node/register npx sequelize-cli migration:generate --migrations-path src/migrations",
     "migrate:undo": "sequelize-cli db:migrate:undo --require ts-node/register"
   },
